Alignment issue fixed

--- a/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/Collection.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/Collection.css
@@ -1451,6 +1451,3 @@ width: 100%;
 	width: 100%;
 	font-size: 12px;
 }
-.setPopupStyle{
-	top:0px !important;
-}
